String adjustment